Added source code, docker wrap, tests, writeups(pics + text), flag, description for task5 Fixed exploit for task3 Added mem limit for task4 bot has been moved to "for_user" folder DNS-Resolver has been rebuilded

--- a/CyberCrew/task5/src/docker-compose.yml
+++ b/CyberCrew/task5/src/docker-compose.yml
@@ -1,13 +1,13 @@
 version: "2.4"
 services:
-  backend:
-    container_name: task4
+  task5:
+    container_name: task5
     build:
       context: .
       dockerfile: Dockerfile
     restart: always
     ports:
-      - 7070:7070
+      - 7171:7171
     volumes:
       - ./code:/code:ro
     read_only: true
